OrderedList was added

--- a/Homework01/index.html
+++ b/Homework01/index.html
@@ -16,6 +16,11 @@
             <li>Beruf: angehender Softwareentwickler</li>
             <li>Hobbys: Programmieren, Lesen, Wandern</li>
         </ul>
+
+        <ol>
+            <li>Verheiratet</li>
+            <li>Kind</li>
+        </ol>
     </section>
     <section>
         <h2>Bildungsweg</h2>
