Update index.html with translated headings and content

--- a/Homework01/index.html
+++ b/Homework01/index.html
@@ -7,49 +7,49 @@
 </head>
 <body>
     <header>
-        <h1>Über mich</h1>
+        <h1>about me</h1>
     </header>
     <section>
-        <h2>Persönliche Informationen</h2>
+        <h2>Personal Information</h2>
         <ul>
             <li>Name: Zamanov Rustam</li>
-            <li>Beruf: angehender Softwareentwickler</li>
-            <li>Hobbys: Programmieren, Lesen, Wandern</li>
+            <li>Profession: aspiring software developer</li>
+            <li>Hobbies: Programming, Reading, Hiking</li>
         </ul>
 
         <ol>
-            <li>Verheiratet</li>
-            <li>Kind</li>
+            <li>married</li>
+            <li>One Child</li>
         </ol>
     </section>
     <section>
-        <h2>Bildungsweg</h2>
+        <h2>Educational Background</h2>
         <table>
             <tr>
-                <th>Jahr</th>
-                <th>Abschluss</th>
+                <th>Year</th>
+                <th>Degree</th>
                 <th>Institution</th>
             </tr>
             <tr>
                 <td>2010</td>
-                <td>Mittlere Reife</td>
+                <td>Secondary School Certificate</td>
                 <td>Realschule Nürnberg</td>
             </tr>
             <tr>
                 <td>2024</td>
-                <td>Softwareentwickler</td>
+                <td>Software Developer</td>
                 <td>AI-TR</td>
             </tr>
             <tr>
                 <td>2027</td>
-                <td>M.Sc. Informatik</td>
+                <td>M.Sc. Computer Science</td>
                 <td>FAU Nürnberg</td>
             </tr>
         </table>
     </section>
     <section>
-        <h2>Mein Foto</h2>
-        <img src="" alt="Ein Foto von mir">
+        <h2>My Photo</h2>
+        <img src="" alt="A photo of me">
     </section>
 </body>
 </html>
